--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -77,14 +77,14 @@ jobs:
           EOF_ENV
 
           # Stop currently running containers
-          sudo docker compose down
+          sudo docker-compose down
           
           # Pull the newly updated image tag from Docker Hub
-          sudo docker compose pull
+          sudo docker-compose pull
           
           # Start the containers using the new configuration. 
           # Docker Compose automatically reads from the .env file in the current directory.
-          sudo docker compose up -d
+          sudo docker-compose up -d
           
           # Optional: Clean up the sensitive .env file after startup if desired for security
           # rm .env
